--- a/知识点总结/网络编程.md
+++ b/知识点总结/网络编程.md
@@ -92,7 +92,7 @@ accept（） //获取到请求的客户端SOCKET对象
 
   -  基于http协议，通过SSL/TLS提供加密处理数据、验证身份以及数据完整性保护
 
-    ![image-20200326211142608](C:\Users\金鑫\AppData\Roaming\Typora\typora-user-images\image-20200326211142608.png)
+    ![image-20200326211142608](C:\Users\jinxin\AppData\Roaming\Typora\typora-user-images\image-20200326211142608.png)
 
   - 非对称加密
 
@@ -132,7 +132,7 @@ accept（） //获取到请求的客户端SOCKET对象
 
   - 每次创建一个连接放到连接数组中（队列），每次循环遍历看有无有传输数据过来
 
-    ![image-20200327164804482](C:\Users\金鑫\AppData\Roaming\Typora\typora-user-images\image-20200327164804482.png)
+    ![image-20200327164804482](C:\Users\jinxin\AppData\Roaming\Typora\typora-user-images\image-20200327164804482.png)
 
   - 缺点：每次循环都要调用下read，大量连接下，资源耗用大，复杂度O(N)
 
@@ -142,7 +142,7 @@ accept（） //获取到请求的客户端SOCKET对象
 
   - poll（）底层就是select，将连接数组传给内核，在内核内完成O（n）次**主动**遍历并返回可读的连接
 
-    ![image-20200327165616086](C:\Users\金鑫\AppData\Roaming\Typora\typora-user-images\image-20200327165616086.png)
+    ![image-20200327165616086](C:\Users\jinxin\AppData\Roaming\Typora\typora-user-images\image-20200327165616086.png)
 
   - 缺点：可以降低内核的遍历复杂度- 
 
@@ -155,4 +155,45 @@ accept（） //获取到请求的客户端SOCKET对象
     - epoll_ctl(8,6) 将对应的文件标识符丢入epoll容器中
     - epoll_await(8,)  等待epoll容器中文件标识符对应的事件
 
-![image-20200327172809661](C:\Users\金鑫\AppData\Roaming\Typora\typora-user-images\image-20200327172809661.png)
+![image-20200327172809661](C:\Users\jinxin\AppData\Roaming\Typora\typora-user-images\image-20200327172809661.png)
+
+## 3.NETTY
+
+参考：https://www.cnblogs.com/crazymakercircle/p/9853586.html
+
+### Reactor模式
+
+- 使用了同步非阻塞的IO多路复用机制
+- IO多路复用中涉及到事件分发器，reactor（同步），Proacter（异步）
+- reactor模式是一种处理一个或多个客户端交付服务请求的事件设计模式，当请求到达后，服务处理程序使用IO多路复用策略，然后同步的派发这些请求到对应的请求处理程序。
+- 5种角色
+  - handle：linux中是文件描述符，window叫做句柄，事件的发源地（connection，write，read）
+  - 同步事件分离器：本质是系统调用（如poll、epoll、select）
+  - 事件处理器：定义一些回调方法（钩子函数），当handle上有事件发生时，会执行回调方法，事件处理机制
+  - 具体事件处理器：对不同的回调方法，实现其具体的业务逻辑
+  - 初始分发器：提供注册、删除与转发事件处理器的功能。当同步事件分离器发现handle状态发生改变时，便会通知分发器调用对应的事件处理器
+
+### netty
+
+- eventloop（reactor反应器）
+
+- handler
+
+  - ![image-20200505103234251](C:\Users\jinxin\AppData\Roaming\Typora\typora-user-images\image-20200505103234251.png)
+
+  - 一个客户端连接对应一个channel（内部封装的是java nio selectablechannel）可查询通道
+
+  - 一个channel对应一个channelpipeline
+
+    - ![image-20200505104312081](C:\Users\jinxin\AppData\Roaming\Typora\typora-user-images\image-20200505104312081.png)
+    - 双向链表，将属于同一个channel的Handler组织起来，并封装在channelpipeline类中
+    - 在channel被创建的时候创建
+
+    - channelcontext
+
+      - handler是无状态的，而channelpipeline是有状态的，channelcontext是2者之间交互的中间角色
+
+      - 双向链表是由channelhandlercontext组成的，头结点是headcontext，尾结点是tailcontext。而无状态的handler作为context的成员关联在context中，一个context关联一个handler
+
+
+
