--- a/知识点总结/网络编程.md
+++ b/知识点总结/网络编程.md
@@ -120,7 +120,7 @@ accept（） //获取到请求的客户端SOCKET对象
 
 - BIO
 
-  ![image-20200327163524627](C:\Users\金鑫\AppData\Roaming\Typora\typora-user-images\image-20200327163524627.png)
+  ![image-20200327163524627](https://github.com/moodsjinxin/moods/raw/master/images/image-20200327163524627.png)
 
   - 缺点：内核clone创建多个线程，多线程占用资源大，且调度资源消耗大
 
@@ -132,7 +132,7 @@ accept（） //获取到请求的客户端SOCKET对象
 
   - 每次创建一个连接放到连接数组中（队列），每次循环遍历看有无有传输数据过来
 
-    ![image-20200327164804482](C:\Users\jinxin\AppData\Roaming\Typora\typora-user-images\image-20200327164804482.png)
+    ![image-20200327164804482](https://github.com/moodsjinxin/moods/raw/master/images/image-20200327164804482.png)
 
   - 缺点：每次循环都要调用下read，大量连接下，资源耗用大，复杂度O(N)
 
@@ -142,7 +142,7 @@ accept（） //获取到请求的客户端SOCKET对象
 
   - poll（）底层就是select，将连接数组传给内核，在内核内完成O（n）次**主动**遍历并返回可读的连接
 
-    ![image-20200327165616086](C:\Users\jinxin\AppData\Roaming\Typora\typora-user-images\image-20200327165616086.png)
+    ![image-20200327165616086](https://github.com/moodsjinxin/moods/raw/master/images/image-20200327165616086.png)
 
   - 缺点：可以降低内核的遍历复杂度- 
 
@@ -155,7 +155,7 @@ accept（） //获取到请求的客户端SOCKET对象
     - epoll_ctl(8,6) 将对应的文件标识符丢入epoll容器中
     - epoll_await(8,)  等待epoll容器中文件标识符对应的事件
 
-![image-20200327172809661](C:\Users\jinxin\AppData\Roaming\Typora\typora-user-images\image-20200327172809661.png)
+![image-20200327172809661](https://github.com/moodsjinxin/moods/raw/master/images/image-20200327172809661.png)
 
 ## 3.NETTY
 
@@ -179,13 +179,13 @@ accept（） //获取到请求的客户端SOCKET对象
 
 - handler
 
-  - ![image-20200505103234251](C:\Users\jinxin\AppData\Roaming\Typora\typora-user-images\image-20200505103234251.png)
+  - ![image-20200505103234251](https://github.com/moodsjinxin/moods/raw/master/images/image-20200505103234251.png)
 
   - 一个客户端连接对应一个channel（内部封装的是java nio selectablechannel）可查询通道
 
   - 一个channel对应一个channelpipeline
 
-    - ![image-20200505104312081](C:\Users\jinxin\AppData\Roaming\Typora\typora-user-images\image-20200505104312081.png)
+    - ![image-20200505104312081](https://github.com/moodsjinxin/moods/raw/master/images/image-20200505104312081.png)
     - 双向链表，将属于同一个channel的Handler组织起来，并封装在channelpipeline类中
     - 在channel被创建的时候创建
 
